--- a/package.json
+++ b/package.json
@@ -1,34 +1,49 @@
 {
-  "name": "cute",
-  "version": "0.1.0",
-  "private": true,
+  "name": "cute-spring",
+  "version": "1.1.0",
+  "description": "React components library",
+  "author": "spring_zou",
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "license": "MIT",
+  "keywords": [
+    "Component",
+    "UI",
+    "React"
+  ],
+  "homepage": "https://github.com/Spring-Listening/cute",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Spring-Listening/cute"
+  },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/classnames": "^2.2.11",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "react-transition-group": "^4.4.1",
-    "typescript": "^4.1.5",
-    "web-vitals": "^1.0.1"
+    "react-transition-group": "^4.4.1"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "clean": "rimraf ./dist",
+    "lint": "eslint --ext js,ts,tsx src --max-warnings 5",
+    "build": "npm run clean && npm run build-ts && npm run build-css",
     "test": "react-scripts test",
+    "test:nowatch": "cross-env CI=true react-scripts test",
     "eject": "react-scripts eject",
+    "build-ts": "tsc -p tsconfig.build.json",
+    "build-css": "node-sass ./src/styles/index.scss ./dist/index.css",
+    "prepare": "npm run build",
     "storybook": "start-storybook -p 6006 -s public",
     "storybook-docs": "start-storybook --docs",
     "build-storybook-docs": "build-storybook --docs",
@@ -39,6 +54,11 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test:nowatch && npm run lint"
+    }
   },
   "browserslist": {
     "production": [
@@ -62,8 +82,24 @@
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.18",
     "@storybook/theming": "^6.1.18",
-    "@types/react-transition-group": "^4.4.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-transition-group": "^4.2.3",
     "@types/storybook__addon-info": "^5.2.3",
-    "react-docgen-typescript-loader": "^3.7.2"
+    "cross-env": "^7.0.3",
+    "husky": "^5.0.9",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.1",
+    "react-docgen-typescript-loader": "^3.7.2",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.2",
+    "typescript": "^4.1.5",
+    "web-vitals": "^1.0.1"
   }
 }
