--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,25 @@
-name: CI #自动化的名称
+name: GitHub Actions Build and Deploy Demo
 on:
-  push: # push的时候触发
-    branches: # 那些分支需要触发
+  push:
+    branches:
       - master
 jobs:
-  build:
-    runs-on: ubuntu-latest # 镜像市场
+  build-and-deploy:
+    runs-on: ubuntu-latest
     steps:
-      - name: checkout # 步骤的名称
-        uses: actions/checkout@master #软件市场的名称
-        with: # 参数
-          submodules: true
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2.2.2
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
-          hugo-version: '0.59.1'
-          extended: true
-      - name: Build
-        run: npm run build-storybook
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v2.5.1
-        env:
-          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          # EXTERNAL_REPOSITORY: homeant/homeant.github.io
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: ./storybook-static
+          persist-credentials: false
+
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: | #注意我这里是使用的yarn管理包，如果你使用的npm，请换成npm的命令：npm install和npm run build
+          yarn
+          yarn build-storybook
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@3.6.2
+        with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} #secrets.ACCESS_TOKEN是项目配置的密钥
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: storybook-static # The folder the action should deploy.
+          CLEAN: true # Automatically remove deleted files from the deploy branch
